--- a/pages/event/styles.module.scss
+++ b/pages/event/styles.module.scss
@@ -3,7 +3,8 @@
 .addProductContainer {
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  margin-top: 0.2rem;
+  margin-bottom: 3rem;
 
   .materialPaper {
     margin-top: 3rem;
