--- a/pages/events/styles.module.scss
+++ b/pages/events/styles.module.scss
@@ -34,6 +34,11 @@
         justify-content: space-between;
         white-space: nowrap;
         margin-bottom: -0.5rem;
+
+        .subscribedBtn {
+          background-color: $success;
+          color: $white;
+        }
       }
     }
   }
