--- a/pages/auth/login/styles.module.scss
+++ b/pages/auth/login/styles.module.scss
@@ -19,8 +19,8 @@
       margin-top: 4rem;
     }
 
-    .button {
-      width: 20rem;
+    .LoginButton {
+      width: 25rem;
       margin-top: 2rem;
       background-color: $white;
       color: $black;
