--- a/pages/auth/signin/styles.module.scss
+++ b/pages/auth/signin/styles.module.scss
@@ -6,7 +6,6 @@
 
   .wrapper {
     display: flex;
-    align-items: center;
     transform: rotate(11deg) translate(-20%, -10%);
     position: fixed;
     top: 0px;
@@ -14,32 +13,23 @@
     width: 70%;
     height: 150%;
     background-color: #002140;
-    z-index: 2;
   }
 
   .content {
     position: relative;
     display: flex;
-    padding: 30px;
-    width: 100%;
     height: calc(100vh - 64px);
     align-items: center;
-    font-weight: bold;
-    text-align: center;
     z-index: 2;
 
     .cardWrapper {
       display: flex;
-      width: 400px;
+      width: 28rem;
+      height: 25rem;
       flex-direction: column;
       align-items: center;
-      justify-items: center;
-      margin-left: 15%;
-      font-size: 1.2rem;
-      z-index: 3;
-      height: 22rem;
       justify-content: center;
-      align-items: center;
+      margin-left: 15%;
       background-color: white;
       border-radius: 5px;
 
