--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -2,7 +2,7 @@ $background: #f8f8f8;
 $light-grey: #fcfbfa;
 $grey: #c4c4c4;
 $error: #FF3333;
-$primary: #01225a;
+$primary: #002140;
 $secondary: #54b9e8;
 $disable: #c3cbd8bb;
 $border: #949494;
